Доработал СТТ. Готовлю ТТС модуль
